// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`put-generation > basic put with only required fields 1`] = `
{
  "Item": {
    "email": "user@example.com",
    "id": "123",
    "pk": "user#123",
    "role": "user",
    "sk": "user@example.com",
    "type": "user",
  },
  "TableName": "test-table",
}
`;

exports[`put-generation > put derives keys from data 1`] = `
{
  "Item": {
    "email": "alice@example.com",
    "id": "abc-123",
    "pk": "user#abc-123",
    "role": "user",
    "sk": "alice@example.com",
    "type": "user",
  },
  "TableName": "test-table",
}
`;

exports[`put-generation > put strips unknown field 1`] = `
{
  "Item": {
    "email": "user@example.com",
    "id": "123",
    "pk": "user#123",
    "role": "user",
    "sk": "user@example.com",
    "type": "user",
  },
  "TableName": "test-table",
}
`;

exports[`put-generation > put with optional fields 1`] = `
{
  "Item": {
    "email": "user@example.com",
    "id": "123",
    "name": "Alice",
    "pk": "user#123",
    "role": "user",
    "sk": "user@example.com",
    "type": "user",
  },
  "TableName": "test-table",
}
`;
